backend alignemnt fixes for posts grid block, removing horizontal scroll on chrome bug, template modal adjustments

--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -24,6 +24,10 @@
 	background-attachment: scroll;
 }
 
+html {
+	overflow-x: hidden;
+}
+
 .c9-grid {
 	display: -ms-grid;
 	display: grid;
